demo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-nginx-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-nginx-vs
spec:
  hosts:
  - "*"
  gateways:
  - demo-nginx-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: demo-nginx-svc
        port:
          number: 9080
